Add colors to tags, scroll to top upon clicking them

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,7 @@
 @import url("./layouts.css");
 @import url("./bootstrap-overrides.css");
 @import url("./cards.css");
+@import url("./tags.css");
 
 #app {
   width: 100vw;
