--- a/public/cards.css
+++ b/public/cards.css
@@ -37,6 +37,7 @@
   cursor: pointer;
   text-decoration: none;
   user-select: none;
+  border: 1px solid rgba(136, 122, 122, 0.5);
 }
 
 .tag:hover {
