--- a/public/cards.css
+++ b/public/cards.css
@@ -29,6 +29,7 @@
 }
 
 .card-header {
+  --bg-color-opacity: 0.3;
   flex-basis: unset;
   padding-top: 15px !important;
   padding-bottom: 15px !important;
